added media queries

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,2 +1,2 @@
 <h1 class="center"><%=forename%> <strong><%=surname.toUpperCase()%></strong></h1>
-<div class="row center">email: <%=email%> tel: <%=tel%></div>
+<div class="row center"><span class="contact">email: <%=email%></span> <span class="contact">tel: <%=tel%></span></div>
