--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,9 @@
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<meta charset="utf-8"/>
 		<link rel="stylesheet" href="templates/style.css"/>
+		<title>Owen Scott CV</title>
 	</head>
 	<body>
 		<div id="cv" class="container">
