--- a/templates/style.css
+++ b/templates/style.css
@@ -44,7 +44,7 @@ body {
 	border-radius: 2px;
 }
 
-@media screen and (min-width: 760px) {
+@media (min-width: 760px) {
 	.col2-3 {
 		margin-left:3.8cm;
 		float:left;
@@ -77,7 +77,7 @@ body {
 
 }
 
-@media screen and (max-width: 759px) {
+@media (max-width: 759px) {
 	.col2-3, .col2-3-contents {
 		float:left;
 		width:100%; /* 3 inches + 2.25 inches */
